packages/beynac/src/test-utils/source/__fixtures__/errors/bad-entry-point/source.ts
import { BaseClass } from "../../../../../utils.ts";

export class SourceValue extends BaseClass {}
